# randomalarm

./: README.md
backend/: .flake8  .flake8.txt  README.md  pyproject.toml  render.yaml  requirements.txt
backend/app/: __init__.py  logic.py  main.py  routes.py  schemas.py
backend/tests/: test_main.py
